
2022-03-29  Ron Norman <rjn@inglenet.com>

	* common.c (cob_find_path) : If unistd.h not present or on Windows
					The code to check group permissions is not used

2022-03-28  Ron Norman <rjn@inglenet.com>

	* common.c,common.h : Add routines cob_setup_env, cob_getenv_value,
						cob_relocate_string. All used for installing
						compiler into directory different that declared
						when compiler was built

2022-02-21  Ron Norman <rjn@inglenet.com>

	* move.c (cob_move_display_to_packed): If P used in PIC adjust data move
	* termio.c (pretty_display): Check for use of P in PIC and adjust

2022-02-16  Ron Norman <rjn@inglenet.com>

	* screenio.c (cob_field_display): If no field, use empty field as default
					This is to handle DISPLAY OMITTED

2022-01-28  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_check_trace_file), coblocal.h: externalize function
	* fileio.c (cob_file_save_status): make io tracing independent
	  of execution tracing
	* fileio.c (cob_file_save_status): instead of only partial open logic for
	  the trace file, use full implementation of cob_check_trace_file;
	  moved some code to inline functions
	* common.h, coblocal.h: hide cob_file_fcd_sync, cob_fcd_file_sync
	* fextfh.c (update_file_to_fcd, copy_file_to_fcd): moved some settings in
	  fcd, amongst others preserving io trace and io stat flags
	* fileio.c, fextfh.c (update_file_to_fcd, copy_fcd_to_file), fileio.c:
	  handle ls_instab attribute
	* common.h (cob_file), fileio.c: define and handle organization and access_mode
	  as enums

2022-01-25  Ron Norman <rjn@inglenet.com>

	* common.h: Add define  COB_MAX_COMPX

2022-01-24  Ron Norman <rjn@inglenet.com>

	* common.c: report if no runtime.cfg was used

2022-01-19  Ron Norman <rjn@inglenet.com>

	* reportio.c: Use cob_move to copy 'literal' into report field

2022-01-17  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c (cob_decimal_adjust): rewrite code for trailing zero removing,